packages/typ/tests/fixtures/diagnostics/0065_core_tuple_annotation_mismatch_06.ml.infer.expected
File "0065_core_tuple_annotation_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0065_core_tuple_annotation_mismatch_06 is not a valid module name.

File "0065_core_tuple_annotation_mismatch_06.ml", line 1, characters 25-29:
1 | let zeta : int * bool = (true, 5)
                             ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
